--- a/build.gradle
+++ b/build.gradle
@@ -7,13 +7,30 @@ version = '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
 }
 
 dependencies {
-    implementation group: 'org.apache.groovy', name: 'groovy-all', version: '4.0.14'
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M1-groovy-4.0'
+    implementation 'org.apache.groovy:groovy-all:4.0.14'
+
+    implementation 'ch.qos.logback:logback-classic:1.4.11'
+    implementation 'ch.qos.logback:logback-core:1.4.11'
+    implementation 'org.slf4j:slf4j-api:2.0.7'
+
+    testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
+    testImplementation 'com.athaydes:spock-reports:2.5.1-groovy-4.0'
 }
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes('Implementation-Title': project.name,
+                'Implementation-Version': project.version)
+    }
+    archiveBaseName.set("the-rover-problem")
 }
