--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,21 @@
 plugins {
     id 'groovy'
+    id 'org.springframework.boot' version '3.1.3'
+    id 'io.spring.dependency-management' version '1.1.3'
 }
 
 group = 'works.hop'
 version = '1.0-SNAPSHOT'
+
+java {
+    sourceCompatibility = '17'
+}
+
+configurations {
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
@@ -13,11 +25,19 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+
     implementation 'org.apache.groovy:groovy-all:4.0.14'
 
     implementation 'ch.qos.logback:logback-classic:1.4.11'
     implementation 'ch.qos.logback:logback-core:1.4.11'
     implementation 'org.slf4j:slf4j-api:2.0.7'
+
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'com.h2database:h2'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     testImplementation 'org.spockframework:spock-core:2.4-M1-groovy-4.0'
     testImplementation 'com.athaydes:spock-reports:2.5.1-groovy-4.0'
