--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'groovy'
     id 'org.springframework.boot' version '3.1.3'
     id 'io.spring.dependency-management' version '1.1.3'
+    id "org.sonarqube" version "4.3.1.3277"
 }
 
 group = 'works.hop'
@@ -9,6 +10,14 @@ version = '1.0-SNAPSHOT'
 
 java {
     sourceCompatibility = '17'
+}
+
+sonar {
+    properties {
+        property "sonar.projectKey", "grover-problem"
+        property "sonar.organization", "practicaldime"
+        property "sonar.host.url", "http://localhost:9000"
+    }
 }
 
 configurations {
